# cpp_starter_project

./: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  CMakeSettings.json  responsefile.txt  x64-linux_responsefile.txt  x64-windows_responsefile.txt
.github/workflows/: main.yml  main.yml.orig
MathFunctions/: CMakeLists.txt  CMakeLists.txt.orig
TutorialDir/: CMakeLists.txt  Tutorial.cxx
TutorialDir/subDir/: subDir.cmake
cmake/: CompilerWarnings.cmake  Conan.cmake  PrintVariables.cmake  StandardProjectSettings.cmake  main.cpp
fuzz_test/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
